@@ -77,45 +77,46 @@
 #define EC_IOCTL_CONFIG_PDO           EC_IOWR(0x15, ec_ioctl_config_pdo_t)
 #define EC_IOCTL_CONFIG_PDO_ENTRY     EC_IOWR(0x16, ec_ioctl_config_pdo_entry_t)
 #define EC_IOCTL_CONFIG_SDO           EC_IOWR(0x17, ec_ioctl_config_sdo_t)
+#define EC_IOCTL_EOE_HANDLER          EC_IOWR(0x18, ec_ioctl_eoe_handler_t)
 
 // Application interface
-#define EC_IOCTL_REQUEST                EC_IO(0x18)
-#define EC_IOCTL_CREATE_DOMAIN          EC_IO(0x19)
-#define EC_IOCTL_CREATE_SLAVE_CONFIG  EC_IOWR(0x1a, ec_ioctl_config_t)
-#define EC_IOCTL_ACTIVATE              EC_IOR(0x1b, size_t)
-#define EC_IOCTL_SEND                   EC_IO(0x1c)
-#define EC_IOCTL_RECEIVE                EC_IO(0x1d)
-#define EC_IOCTL_MASTER_STATE          EC_IOR(0x1e, ec_master_state_t)
-#define EC_IOCTL_APP_TIME              EC_IOW(0x1f, ec_ioctl_app_time_t)
-#define EC_IOCTL_SYNC_REF               EC_IO(0x20)
-#define EC_IOCTL_SYNC_SLAVES            EC_IO(0x21)
-#define EC_IOCTL_SC_SYNC               EC_IOW(0x22, ec_ioctl_config_t)
-#define EC_IOCTL_SC_ADD_PDO            EC_IOW(0x23, ec_ioctl_config_pdo_t)
-#define EC_IOCTL_SC_CLEAR_PDOS         EC_IOW(0x24, ec_ioctl_config_pdo_t)
-#define EC_IOCTL_SC_ADD_ENTRY          EC_IOW(0x25, ec_ioctl_add_pdo_entry_t)
-#define EC_IOCTL_SC_CLEAR_ENTRIES      EC_IOW(0x26, ec_ioctl_config_pdo_t)
-#define EC_IOCTL_SC_REG_PDO_ENTRY     EC_IOWR(0x27, ec_ioctl_reg_pdo_entry_t)
-#define EC_IOCTL_SC_DC                 EC_IOW(0x28, ec_ioctl_config_t)
-#define EC_IOCTL_SC_SDO                EC_IOW(0x29, ec_ioctl_sc_sdo_t)
-#define EC_IOCTL_SC_SDO_REQUEST       EC_IOWR(0x2a, ec_ioctl_sdo_request_t)
-#define EC_IOCTL_SC_VOE               EC_IOWR(0x2b, ec_ioctl_voe_t)
-#define EC_IOCTL_SC_STATE             EC_IOWR(0x2c, ec_ioctl_sc_state_t)
-#define EC_IOCTL_DOMAIN_OFFSET          EC_IO(0x2d)
-#define EC_IOCTL_DOMAIN_PROCESS         EC_IO(0x2e)
-#define EC_IOCTL_DOMAIN_QUEUE           EC_IO(0x2f)
-#define EC_IOCTL_DOMAIN_STATE         EC_IOWR(0x30, ec_ioctl_domain_state_t)
-#define EC_IOCTL_SDO_REQUEST_TIMEOUT  EC_IOWR(0x31, ec_ioctl_sdo_request_t)
-#define EC_IOCTL_SDO_REQUEST_STATE    EC_IOWR(0x32, ec_ioctl_sdo_request_t)
-#define EC_IOCTL_SDO_REQUEST_READ     EC_IOWR(0x33, ec_ioctl_sdo_request_t)
-#define EC_IOCTL_SDO_REQUEST_WRITE    EC_IOWR(0x34, ec_ioctl_sdo_request_t)
-#define EC_IOCTL_SDO_REQUEST_DATA     EC_IOWR(0x35, ec_ioctl_sdo_request_t)
-#define EC_IOCTL_VOE_SEND_HEADER       EC_IOW(0x36, ec_ioctl_voe_t)
-#define EC_IOCTL_VOE_REC_HEADER       EC_IOWR(0x37, ec_ioctl_voe_t)
-#define EC_IOCTL_VOE_READ              EC_IOW(0x38, ec_ioctl_voe_t)
-#define EC_IOCTL_VOE_READ_NOSYNC       EC_IOW(0x39, ec_ioctl_voe_t)
-#define EC_IOCTL_VOE_WRITE            EC_IOWR(0x3a, ec_ioctl_voe_t)
-#define EC_IOCTL_VOE_EXEC             EC_IOWR(0x3b, ec_ioctl_voe_t)
-#define EC_IOCTL_VOE_DATA             EC_IOWR(0x3c, ec_ioctl_voe_t)
+#define EC_IOCTL_REQUEST                EC_IO(0x19)
+#define EC_IOCTL_CREATE_DOMAIN          EC_IO(0x1a)
+#define EC_IOCTL_CREATE_SLAVE_CONFIG  EC_IOWR(0x1b, ec_ioctl_config_t)
+#define EC_IOCTL_ACTIVATE              EC_IOR(0x1c, size_t)
+#define EC_IOCTL_SEND                   EC_IO(0x1d)
+#define EC_IOCTL_RECEIVE                EC_IO(0x1e)
+#define EC_IOCTL_MASTER_STATE          EC_IOR(0x1f, ec_master_state_t)
+#define EC_IOCTL_APP_TIME              EC_IOW(0x20, ec_ioctl_app_time_t)
+#define EC_IOCTL_SYNC_REF               EC_IO(0x21)
+#define EC_IOCTL_SYNC_SLAVES            EC_IO(0x22)
+#define EC_IOCTL_SC_SYNC               EC_IOW(0x23, ec_ioctl_config_t)
+#define EC_IOCTL_SC_ADD_PDO            EC_IOW(0x24, ec_ioctl_config_pdo_t)
+#define EC_IOCTL_SC_CLEAR_PDOS         EC_IOW(0x25, ec_ioctl_config_pdo_t)
+#define EC_IOCTL_SC_ADD_ENTRY          EC_IOW(0x26, ec_ioctl_add_pdo_entry_t)
+#define EC_IOCTL_SC_CLEAR_ENTRIES      EC_IOW(0x27, ec_ioctl_config_pdo_t)
+#define EC_IOCTL_SC_REG_PDO_ENTRY     EC_IOWR(0x28, ec_ioctl_reg_pdo_entry_t)
+#define EC_IOCTL_SC_DC                 EC_IOW(0x29, ec_ioctl_config_t)
+#define EC_IOCTL_SC_SDO                EC_IOW(0x2a, ec_ioctl_sc_sdo_t)
+#define EC_IOCTL_SC_SDO_REQUEST       EC_IOWR(0x2b, ec_ioctl_sdo_request_t)
+#define EC_IOCTL_SC_VOE               EC_IOWR(0x2c, ec_ioctl_voe_t)
+#define EC_IOCTL_SC_STATE             EC_IOWR(0x2d, ec_ioctl_sc_state_t)
+#define EC_IOCTL_DOMAIN_OFFSET          EC_IO(0x2e)
+#define EC_IOCTL_DOMAIN_PROCESS         EC_IO(0x2f)
+#define EC_IOCTL_DOMAIN_QUEUE           EC_IO(0x30)
+#define EC_IOCTL_DOMAIN_STATE         EC_IOWR(0x31, ec_ioctl_domain_state_t)
+#define EC_IOCTL_SDO_REQUEST_TIMEOUT  EC_IOWR(0x32, ec_ioctl_sdo_request_t)
+#define EC_IOCTL_SDO_REQUEST_STATE    EC_IOWR(0x33, ec_ioctl_sdo_request_t)
+#define EC_IOCTL_SDO_REQUEST_READ     EC_IOWR(0x34, ec_ioctl_sdo_request_t)
+#define EC_IOCTL_SDO_REQUEST_WRITE    EC_IOWR(0x35, ec_ioctl_sdo_request_t)
+#define EC_IOCTL_SDO_REQUEST_DATA     EC_IOWR(0x36, ec_ioctl_sdo_request_t)
+#define EC_IOCTL_VOE_SEND_HEADER       EC_IOW(0x37, ec_ioctl_voe_t)
+#define EC_IOCTL_VOE_REC_HEADER       EC_IOWR(0x38, ec_ioctl_voe_t)
+#define EC_IOCTL_VOE_READ              EC_IOW(0x39, ec_ioctl_voe_t)
+#define EC_IOCTL_VOE_READ_NOSYNC       EC_IOW(0x3a, ec_ioctl_voe_t)
+#define EC_IOCTL_VOE_WRITE            EC_IOWR(0x3b, ec_ioctl_voe_t)
+#define EC_IOCTL_VOE_EXEC             EC_IOWR(0x3c, ec_ioctl_voe_t)
+#define EC_IOCTL_VOE_DATA             EC_IOWR(0x3d, ec_ioctl_voe_t)
 
 /*****************************************************************************/
 
@@ -127,6 +128,7 @@ typedef struct {
     uint32_t slave_count;
     uint32_t config_count;
     uint32_t domain_count;
+    uint32_t eoe_handler_count;
     uint8_t phase;
     uint8_t scan_busy;
     struct {
@@ -438,6 +440,24 @@ typedef struct {
     uint32_t size;
     uint8_t data[4];
 } ec_ioctl_config_sdo_t;
+
+/*****************************************************************************/
+
+typedef struct {
+    // input
+    uint16_t eoe_index;
+
+    // outputs
+	char name[EC_DATAGRAM_NAME_SIZE];
+	uint16_t slave_position;
+	uint8_t open;
+	uint32_t rx_bytes;
+	uint32_t rx_rate;
+	uint32_t tx_bytes;
+	uint32_t tx_rate;
+	uint32_t tx_queued_frames;
+	uint32_t tx_queue_size;
+} ec_ioctl_eoe_handler_t;
 
 /*****************************************************************************/
 
